[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorio"
authors = [
    { name = "Mohsen Hariri", email = "mohsen.hariri@case.edu" },
    { name = "Amirhossein Samandar", email = "amirhossein.samandar@case.edu" },
]
license = "MIT"
readme = { file = "README_PyPI.md", content-type = "text/markdown" }
description = "Bayesian evaluation and ranking toolkit"
keywords = ["bayesian", "statistics", "ranking", "evaluation", "machine learning", "large language models"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["numpy", "scipy"]

[project.urls]
Homepage = "https://scorio.readthedocs.io/"
Repository = "https://github.com/mohsenhariri/scorio"
Issues = "https://github.com/mohsenhariri/scorio/issues"
Documentation = "https://scorio.readthedocs.io/"

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "black>=26.1.0", "isort>=7.0.0", "mypy>=1.18.1", "build>=1.4.0", "twine>=6.2.0", "sphinx>=9.1.0", "sphinx-rtd-theme>=3.1.0", "sphinx-autodoc-typehints>=3.6.2"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["scorio*"]

[tool.setuptools.exclude-package-data]
scorio = ["rank/README.md"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
