[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorio"
authors = [
    { name = "Mohsen Hariri", email = "mohsen.hariri@case.edu" },
    { name = "Amirhossein Samandar", email = "amirhossein.samandar@case.edu" },
]
license = "MIT"
readme = { file = "README_PyPI.md", content-type = "text/markdown" }
description = "Bayesian evaluation and ranking toolkit"
keywords = [
    "bayesian",
    "statistics",
    "ranking",
    "evaluation",
    "machine learning",
    "large language models",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["numpy", "scipy"]

[project.urls]
Homepage = "https://scorio.readthedocs.io/"
Repository = "https://github.com/mohsenhariri/scorio"
Issues = "https://github.com/mohsenhariri/scorio/issues"
Documentation = "https://scorio.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "mypy>=1.18.1",
    "build>=1.4.0",
    "twine>=6.2.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-autodoc-typehints>=3.6.2",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["scorio*"]

[tool.setuptools.exclude-package-data]
scorio = ["rank/README.md"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-too-long (handled by ruff format for code; docstrings with math are OK)
    "E741", # ambiguous-variable-name (math-conventional short names like l, O)
]

[tool.ruff.lint.per-file-ignores]
"scorio/sinf/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["scorio"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["slow: slow tests for heavy ranking APIs"]
